# qwen3_math_ft

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements_finetune.txt
.dvc/: config
configs/: cpt_config.yaml  cpt_linear_eq.yaml  eval_config.yaml  grpo_quadratic_eq.yaml  optimization_config.yaml  sft_config.yaml  sft_linear_eq.yaml  sft_quadratic_eq.yaml
docker/: Dockerfile.serve  Dockerfile.training  init.sql
k8s/: deployment.yaml  grafana.yaml  hpa.yaml  namespace.yaml  prometheus-config.yaml  prometheus.yaml  service.yaml
monitoring/: prometheus.yml
notebooks/: 01_eda.py  finetune_qwen3_linear_eq.py
reports/: deployment_report.md  experiment_report.md  monitoring_report.md
scripts/: benchmark_deployment.py  crawl_vietjack.py  deploy.sh  evaluate.py  evaluate_lsreasoning.py  evaluate_lsreasoning_v2.py  evaluate_quadratic.py  export_wandb_charts.py  generate_cpt_lsreasoning.py  generate_data.py  generate_data_thinking.py  generate_quadratic_data.py  generate_sample_data.sh  inference.py  inference_optimized.py  plot_comparison_wandb.py  prepare_data.py  run_experiment_lsreasoning.py  run_full_pipeline.sh  run_lsreasoning_pipeline.py  run_pipeline.py  run_quadratic_pipeline.py  serve_model.py  serve_model_monitored.py  setup.sh  setup_server.sh  train_cpt_lsreasoning.py  train_cpt_unsloth.py  train_grpo_lsreasoning.py  train_grpo_lsreasoning_v2.py  train_grpo_quadratic.py  train_sft_lsreasoning.py  train_sft_lsreasoning_v2.py  train_sft_only.py  train_sft_quadratic.py  train_sft_unsloth.py
tests/: test_etl.py  (+3 more)
(+112 files in other folders)
