[project]
name = "qwen3-vl-math"
version = "0.1.0"
description = "End-to-end MLOps pipeline for fine-tuning Qwen3-VL on mathematical reasoning"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.4.0",
    "transformers>=4.45.0",
    "datasets>=3.0.0",
    "accelerate>=1.0.0",
    "peft>=0.13.0",
    "trl>=0.12.0",
    "unsloth>=2024.12",
    "bitsandbytes>=0.44.0",
    "deepspeed>=0.15.0",
    "vllm>=0.6.0",
    "mlflow>=2.17.0",
    "dvc>=3.55.0",
    "dvc-s3>=3.0.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "deepeval>=1.0.0",
    "prometheus-client>=0.21.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "Pillow>=10.0.0",
    "qwen-vl-utils>=0.0.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "pre-commit>=4.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src"
